# ticksquay

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  airflow-env_dockerfile  airflow-setup_dockerfile  airflow_docker-compose.yml  mypy.ini  postgres_docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements-venv.txt  requirements.txt  ruff.toml  up2data_b3.py
.github/: CODEOWNERS
.github/workflows/: precommit_hooks.yaml  pull_request.yaml  tests.yaml
bootstrap/: 01-init.sql  01-schemas.sql  02-create-schemas.sql  02-roles.sql  03-create-raw-b3-instrm-reg.sql  03-create-raw-br-irs-companies.sql  03-create-raw-br-irs.sql  03-raw-br-irs.sql
cli/: airflow_change_tag.sh  airflow_matrix_test_versions.sh  bump_version.sh  check_unix_filenames.sh  docker_init.sh  env_config.sh  export_deps.sh  gh_protect_main.sh  gh_status.sh  git_create_branch_from_main.sh  git_pull_force.sh  kill_pids_ports.sh  run_postgres.sh  test_postgres_env.sh  vscode_setup.sh
config/: airflow.cfg  global_slots.py  user_cfg.yaml  webhooks.yaml
config/settings/: _global_slots.py  dbs.yaml  user_cfg.yaml  webhooks.yaml
dags/: irsbr.py  testdag.py
data/: postgres_docker-compose.yml
data/db_init_scripts/: 01-init.sql  02-create-schemas.sql  03-create-raw-b3-instrm-reg.sql
init/: 01-schemas.sql  02-raw-br-irs.sql
plugins/: b3.py  paths.py  xcom.py
shell/: airflow_setup.sh  docker_init.sh  env_config.sh  linux_setup.sh  python_setup.sh  test_airflow_packages.sh  test_airflow_packages_installation.sh
tests/integration/: _mock_db.py  mock_db_test.py
tests/unit/: _mock.py  mock_calculator_test.py
