[tool.poetry]
name = "mktdata-collector"
version = "0.1.0"
description = ""
authors = ["Guilherme Rodrigues <55053188+guilhermegor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
stpstone = "1.0.1"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
