[tool.poetry]
name = "ticksquay"
version = "1.0.0"
description = "Solution for collecting and managing OTC, exchange, and registry market data, focusing on Brazilian and North American markets, with a scalable design for global expansion. Ideal for analysis and research. "
authors = ["Guilherme Rodrigues <55053188+guilhermegor@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/guilhermegor/ticksquay"
repository = "https://github.com/guilhermegor/ticksquay"
keywords = [
    "python",
    "financial",
    "data",
    "ingestion",
    "b3",
    "cvm",
    "exchange",
    "portfolio",
    "fixed income",
    "options",
    "futures",
    "market data",
    "macroeconomic",
    "scraping",
    "statistics",
    "time series",
    "cryptocurrency",
    "brazilian markets"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/guilhermegor/ticksquay/issues"
"Source" = "https://github.com/guilhermegor/ticksquay"

[tool.poetry.dependencies]
python = "~3.12.8"
stpstone = "2.0.9"
python-dotenv = "1.1.0"
apache-airflow = ">=3.0.0,<3.1.0"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"
pre-commit = "4.2.0"
ruff = "0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
